<resources>
    <string name="app_name">TiketSaya</string>
    <string name="slogan">Wisata Jadi Lebih Asyik!</string>
    <string name="signin">SIGN IN</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="email">Email Address</string>
    <string name="selfie_time">Selfie Time</string>
    <string name="name_label">Name</string>
    <string name="passion">Your Passion ?</string>
    <string name="explore_now">EXPLORE NOW</string>
    <string name="dashboard">My Dashboard</string>
    <string name="continue_label">Continue</string>
    <string name="loading">Loading..</string>
    <string name="pay">Pay Now</string>
    <string name="buy_ticket">Buy Ticket</string>
    <string name="ticket_details">Ticket Details</string>
    <string name="tiket_ready">Check the amount of ticket</string>
    <string name="icon_ticket">icon_ticket</string>
    <string name="one">1</string>
    <string name="pricing">Pricing</string>
    <string name="your_current_balance_is">Your current balance is</string>
    <string name="zero">$0</string>
    <string name="total_price">Total Price</string>
    <string name="icon_warning">icon_warning</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="short_edit">We highly suggest you to \nuse the correct informations</string>
    <string name="bio_label">Bio</string>
    <string name="save_profile">Save Profile</string>
    <string name="main_menu">Main Menu</string>
    <string name="desc_world">Explore the beuty of world</string>
    <string name="home">Home</string>
    <string name="view_ticket">View Ticket</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="selamat_menikmati">Selamat Menikmati</string>
    <string name="anda_berhasil_membeli_tiket_ndan_selamat_berlibur">Anda berhasil membeli tiket \ndan selamat berlibur</string>
    <string name="background">background</string>
    <string name="information">Information</string>
    <string name="knowing_before_travel">Knowing before travel</string>
    <string name="icon_hotel">icon hotel</string>
    <string name="tripod_everywhere">Tripod Everywhere</string>
    <string name="icon_phone">icon phone</string>
    <string name="connect_for_any_tourist">Connect for any tourist</string>
    <string name="icon_minum">icon_minum</string>
    <string name="dance_and_foods">Dance and Foods</string>
    <string name="US">$US </string>
</resources>