<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".SuccesBuyActivity">

    <ImageView
        android:id="@+id/app_succes"
        android:layout_width="262dp"
        android:layout_height="308dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/icon_success_ticket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/mmedium"
        android:text="@string/selamat_menikmati"
        android:textColor="@color/blackPrimary"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/app_succes"
        app:layout_constraintStart_toStartOf="@+id/app_succes"
        app:layout_constraintTop_toBottomOf="@+id/app_succes" />

    <TextView
        android:id="@+id/app_sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/mlight"
        android:lineSpacingExtra="9dp"
        android:text="@string/anda_berhasil_membeli_tiket_ndan_selamat_berlibur"
        android:textAlignment="center"
        android:textColor="@color/grayPrimary"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@id/app_title"
        app:layout_constraintStart_toStartOf="@+id/app_title"
        app:layout_constraintTop_toBottomOf="@+id/app_title" />

    <Button
        android:id="@+id/btn_view_ticket"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_btn_blue_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/view_ticket"
        android:textColor="#FFF"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/app_sub"
        app:layout_constraintStart_toStartOf="@+id/app_sub"
        app:layout_constraintTop_toBottomOf="@+id/app_sub" />

    <Button
        android:id="@+id/btn_dashboard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="48dp"
        android:background="@drawable/bg_btn_white_primary"
        android:fontFamily="@font/mmedium"
        android:text="@string/my_dashboard"
        android:textColor="@color/grayPrimary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/btn_view_ticket"
        app:layout_constraintStart_toStartOf="@+id/btn_view_ticket"
        app:layout_constraintTop_toBottomOf="@+id/btn_view_ticket" />

</androidx.constraintlayout.widget.ConstraintLayout>