<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    android:orientation="vertical"
    android:scrollbars="none"
    tools:context=".TicketDetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/header_ticket_detail"
            android:layout_width="match_parent"
            android:layout_height="210dp"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/mregular"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/location_ticket"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/mregular"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/title_ticket"
            app:layout_constraintStart_toStartOf="@+id/title_ticket"
            app:layout_constraintTop_toBottomOf="@+id/title_ticket" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="30dp"
            android:paddingRight="24dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_ticket">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mmedium"
                android:text="@string/information"
                android:textColor="@color/blackPrimary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/knowing_before_travel"
                android:textColor="@color/grayPrimary"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#EDEDED" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:contentDescription="@string/icon_hotel"
                    android:src="@drawable/ic_photo" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ticket_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:textColor="@color/blackPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mlight"
                        android:text="@string/tripod_everywhere"
                        android:textColor="@color/grayPrimary"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:contentDescription="@string/icon_phone"
                    android:src="@drawable/icon_wifi" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ticket_wifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:textColor="@color/blackPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mlight"
                        android:text="@string/connect_for_any_tourist"
                        android:textColor="@color/grayPrimary"
                        android:textSize="14sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:contentDescription="@string/icon_minum"
                    android:src="@drawable/icon_festival" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="6dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/ticket_festival"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:textColor="@color/blackPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mlight"
                        android:text="@string/dance_and_foods"
                        android:textColor="@color/grayPrimary"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/short_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/grayPrimary"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_layout_white"
                    android:drawableStart="@drawable/ic_baseline_arrow_back_black"
                    android:gravity="center"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_buy_ticket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn_blue_primary"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/buy_ticket"
                    android:textColor="#FFF" />

            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>