<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bgPrimary"
    tools:context=".TicketCheckoutActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/bg_gradient_primary_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/buy_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/mregular"
            android:text="@string/buy_ticket"
            android:textColor="#FFF"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="30dp"
            android:paddingRight="24dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/buy_label">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mmedium"
                android:text="@string/ticket_details"
                android:textColor="@color/blackPrimary"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:text="@string/tiket_ready"
                android:textColor="@color/grayPrimary"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#EDEDED" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginBottom="16dp"
                android:layout_weight="3"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="55dp"
                    android:layout_height="55dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/icon_ticket"
                    android:src="@drawable/ic_ticket_buy" />

                <LinearLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="6dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/nama_wisata"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mmedium"
                        android:textColor="@color/blackPrimary"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/txt_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mlight"
                        android:textColor="@color/grayPrimary"
                        android:textSize="12sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/btn_min"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/btnmin"
                        android:text="-"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/jml_ticket"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/mregular"
                        android:paddingStart="8dp"
                        android:paddingEnd="8dp"
                        android:text="@string/one"
                        android:textColor="@color/blackPrimary"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/btn_plus"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/btnplus"
                        android:text="+"
                        android:textColor="@android:color/white"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/txt_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mlight"
                android:lineSpacingExtra="8dp"
                android:textColor="@color/grayPrimary"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/bg_layout_white"
            android:orientation="vertical"
            android:paddingLeft="24dp"
            android:paddingTop="30dp"
            android:paddingRight="24dp"
            android:paddingBottom="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/mmedium"
                android:text="@string/pricing"
                android:textColor="@color/blackPrimary"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/your_current_balance_is"
                    android:textColor="@color/grayPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/zero"
                    android:textColor="@color/bluePrimary"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:background="#EDEDED" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/mlight"
                    android:text="@string/total_price"
                    android:textColor="@color/grayPrimary"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/txt_harga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/zero"
                    android:textColor="@color/greenPrimary"
                    android:textSize="32sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_back"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_layout_white"
                    android:drawableStart="@drawable/ic_baseline_arrow_back_black"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:paddingStart="25dp"
                    android:paddingEnd="25dp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_buy_ticket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_btn_green_primary"
                    android:fontFamily="@font/mmedium"
                    android:text="@string/pay"
                    android:textColor="#FFF" />

            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/notice_uang"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginTop="44dp"
            android:layout_marginEnd="48dp"
            android:contentDescription="@string/icon_warning"
            android:src="@drawable/icon_tidak_cukup_uang"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>

